[package]
name = "preview-rs"
version = "0.1.0"
authors = ["Ayomide Onigbinde <onigbindeayomide@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.12.0"

[[bin]]
name="previewrs-bin"
path="src/main.rs"

