[package]
name = "preview-rs"
version = "0.1.5"
authors = ["Ayomide Onigbinde <onigbindeayomide@gmail.com>"]
edition = "2018"
description="A (simple) crate for fetching preview metadata from shorturls and links"
homepage="https://github.com/oayomide/preview-rs"
repository="https://github.com/oayomide/preview-rs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = ["json", "blocking", "rustls-tls"] }
scraper = "0.16.0"
serde = { version = "1.0.162", features = ["derive"] }
url = "2.3.1"

[[bin]]
name="previewrs-bin"
path="src/main.rs"

